fix: tooltip dark mode UI (#1652)
* fix: tooltip dark mode ui


* fix: antd pagination dark mode

--- a/packages/datasheet/src/pc/components/common/info_card/style.module.less
+++ b/packages/datasheet/src/pc/components/common/info_card/style.module.less
@@ -1,7 +1,7 @@
 @import "~pc/styles/lib_var.less";
 @import "~pc/styles/lib_mixins.less";
 .infoCard {
-  height: 56px;
+  height: 48px;
   display: flex;
   align-items: center;
   width: 100%;
