--- a/packages/datasheet/src/pc/styles/global_components/other.less
+++ b/packages/datasheet/src/pc/styles/global_components/other.less
@@ -37,6 +37,11 @@ h1, h2, h3, h4, h5, h6 {
   background-color: var(--defaultBg);
 }
 
+.ant-pagination-item-link,
+.ant-pagination-item {
+  background-color: var(--defaultBg) !important;
+}
+
 .ant-switch-handle::before {
   background-color: var(--staticWhite0);
 }
