--- a/packages/datasheet/src/pc/styles/global_components/tooltip.less
+++ b/packages/datasheet/src/pc/styles/global_components/tooltip.less
@@ -4,8 +4,6 @@
 @tooltip-max-width: 320px;
 // Tooltip text color
 @tooltip-color: var(--defaultBg);
-// Tooltip background color
-@tooltip-bg: color(var(--tooltipBg) +'');
 // Tooltip arrow width
 @tooltip-arrow-width: 6px;
 // Tooltip distance with trigger
@@ -13,8 +11,14 @@
 // Tooltip arrow color
 @tooltip-arrow-color: var(--tooltipBg);
 
+
+:root {
+  --antd-arrow-background-color: linear-gradient(to right bottom, rgba(var(--tooltipBg-rgb), 0.65), rgba(var(--tooltipBg-rgb), 0.75));
+}
+
 .ant-tooltip-inner {
   font-size: 12px;
   color: var(--defaultBg);
+  background-color: var(--tooltipBg);
   padding: 8px;
 }
